--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="card rounded-16 overflow-hidden border-0 bg-secondary mt-0 mt-md-4">
       <div class="row g-0">
         <div class="col-lg-7">
-          <img src="assets/images/food/cinnamonroll.JPG" class="w-100" alt="Menu">
+          <img src="assets/images/food/cinnamonroll.JPG" class="w-100" >
         </div>
         <div class="col-lg-5">
           <div class="p-4 p-md-5 d-flex flex-column justify-content-center h-100 position-relative">
@@ -57,7 +57,7 @@
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
             <a href="/cookies" class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/food/cookieicon.JPG" class="rounded-circle" alt="Menu">
+              <img src="assets/images/food/cookieicon.JPG" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
               <a href="/cookies" class="tstbite-category-title">Cookies</a>
@@ -67,7 +67,7 @@
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
             <a href="/breads" class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/food/breadsicon.jpeg" class="rounded-circle" alt="Menu">
+              <img src="assets/images/food/breadsicon.jpeg" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
               <a href="/breads" class="tstbite-category-title">Breads</a>
@@ -77,7 +77,7 @@
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
             <a href="/healthierdesserts" class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/food/healthicon.JPG" class="rounded-circle" alt="Menu">
+              <img src="assets/images/food/healthicon.JPG" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
               <a href="/healthierdesserts" class="tstbite-category-title">Healthier Desserts</a>
@@ -87,7 +87,7 @@
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
             <a href="/bars" class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/food/baklavaicon.png" class="rounded-circle" alt="Menu">
+              <img src="assets/images/food/baklavaicon.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
               <a href="/bars" class="tstbite-category-title">Bars</a>
@@ -97,7 +97,7 @@
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
             <a href="/other" class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/food/cupcakesicon.jpg" class="rounded-circle" alt="Menu">
+              <img src="assets/images/food/cupcakesicon.jpg" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
               <a href="/other" class="tstbite-category-title">Other</a>
@@ -107,7 +107,7 @@
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
             <a href="/savory" class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/food/lettucecupsicon.png" class="rounded-circle" alt="Menu">
+              <img src="assets/images/food/lettucecupsicon.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
               <a href="/savory" class="tstbite-category-title">Savory</a>
@@ -143,7 +143,7 @@
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/monkeybread" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/monkeybread.jpeg" class="w-100" alt="Menu">
+              <img src="assets/images/food/monkeybread.jpeg" class="w-100" >
             </a>
             <figcaption class="mt-2">
               <a href="/monkeybread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Monkey Bread Muffins</a>
@@ -175,7 +175,7 @@
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/baklava" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/baklava.jpeg" class="w-100" alt="Menu">
+              <img src="assets/images/food/baklava.jpeg" class="w-100" >
             </a>
             <figcaption class="mt-2">
               <a href="/baklava" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Baklava</a>
@@ -191,28 +191,28 @@
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
             <a class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/food/cbkcc.png" class="rounded-circle" alt="Menu">
+              <img src="assets/images/food/cbkcc.png" class="rounded-circle" >
             </a>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
             <a class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/food/cbksc.png" class="rounded-circle" alt="Menu">
+              <img src="assets/images/food/cbksc.png" class="rounded-circle" >
             </a>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
             <a class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/food/kb.jpg" class="rounded-circle" alt="Menu">
+              <img src="assets/images/food/kb.jpg" class="rounded-circle" >
             </a>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
             <a class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/food/mjcp.jpg" class="rounded-circle" alt="Menu">
+              <img src="assets/images/food/mjcp.jpg" class="rounded-circle" >
             </a>
           </figure>
         </div>
