--- a/meringues.html
+++ b/meringues.html
@@ -57,7 +57,7 @@
       <div class="blog-detail">
         <hr>
         <div class="rounded-12 overflow-hidden position-relative tstbite-svg">
-          <img src="assets/images/food/meringues.jpg" class="w-100" alt="Menu">
+          <img src="assets/images/food/meringues.jpg" class="w-100" >
         </div>
         <br>
         <div class="row mt-0 mt-md-5">
