--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
             <a href="/savory" class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/food/lettucecupsicon.png" class="rounded-circle" >
+              <img src="assets/images/food/tofuicon.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
               <a href="/savory" class="tstbite-category-title">Savory</a>
@@ -123,7 +123,7 @@
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/bostoncreamcupcakes" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/bostoncreamcupcakes.png" class="w-100" alt="Boston Cream Cupcakes">
+              <img src="assets/images/food/bostoncreamcupcakes.png" class="w-100">
             </a>
             <figcaption class="mt-2">
               <a href="/bostoncreamcupcakes" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Boston Cream Cupcakes</a>
@@ -133,7 +133,7 @@
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/cinnamonrolls" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/cinnamonrolls.png" class="w-100" alt="Cinnamon Rolls">
+              <img src="assets/images/food/cinnamonrolls.png" class="w-100">
             </a>
             <figcaption class="mt-2">
               <a href="/cinnamonrolls" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Cinnamon Rolls</a>
@@ -143,7 +143,7 @@
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/monkeybread" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/monkeybread.jpeg" class="w-100" >
+              <img src="assets/images/food/monkeybread.jpeg" class="w-100">
             </a>
             <figcaption class="mt-2">
               <a href="/monkeybread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Monkey Bread Muffins</a>
@@ -155,7 +155,7 @@
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/biscuits" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/biscuits.jpg" class="w-100" alt="Biscuits">
+              <img src="assets/images/food/biscuits.jpg" class="w-100">
             </a>
             <figcaption class="mt-2">
               <a href="/biscuits" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Biscuits</a>
@@ -165,7 +165,7 @@
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/creampuffs" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/creampuffs.jpg" class="w-100" alt="Cream ">
+              <img src="assets/images/food/creampuffs.jpg" class="w-100">
             </a>
             <figcaption class="mt-2">
               <a href="/creampuffs" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Cream Puffs</a>
@@ -175,7 +175,7 @@
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/baklava" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/baklava.jpeg" class="w-100" >
+              <img src="assets/images/food/baklava.jpeg" class="w-100">
             </a>
             <figcaption class="mt-2">
               <a href="/baklava" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Baklava</a>
