--- a/breads.html
+++ b/breads.html
@@ -81,6 +81,16 @@
             </figcaption>
           </figure>
         </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/monkeybread" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/monkeybread.jpeg" class="w-100" alt="Monkey Bread Muffins">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/monkeybread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Monkey Bread Muffins</a>
+            </figcaption>
+          </figure>
+        </div>
       </div>
     </section>
   </div>
