--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
             <a href="/healthierdesserts" class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/food/healthicon.JPG" class="rounded-circle" >
+              <img src="assets/images/food/meringuesicon.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
               <a href="/healthierdesserts" class="tstbite-category-title">Healthier Desserts</a>
