--- a/savory.html
+++ b/savory.html
@@ -59,6 +59,16 @@
             </figcaption>
           </figure>
         </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/biscuits" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/biscuits.jpg" class="w-100" alt="Biscuits">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/biscuits" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Biscuits</a>
+            </figcaption>
+          </figure>
+        </div>
         </div>
         <div class="row">
         <div class="col-md-4">
