--- a/index.html
+++ b/index.html
@@ -122,16 +122,6 @@
       <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/bostoncreamcupcakes" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/bostoncreamcupcakes.png" class="w-100">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/bostoncreamcupcakes" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Boston Cream Cupcakes</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
             <a href="/cinnamonrolls" class="tstbite-animation rounded-6">
               <img src="assets/images/food/cinnamonrolls.png" class="w-100">
             </a>
@@ -147,6 +137,16 @@
             </a>
             <figcaption class="mt-2">
               <a href="/monkeybread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Monkey Bread Muffins</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/pumpkinbread" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/pumpkinloaf.png" class="w-100">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/pumpkinbread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Pumpkin Bread</a>
             </figcaption>
           </figure>
         </div>
