--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
             <a href="/cookies" class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/food/cookieicon.JPG" class="rounded-circle" >
+              <img src="assets/images/food/cookieicon.jpeg" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
               <a href="/cookies" class="tstbite-category-title">Cookies</a>
