--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/monkeybread" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/monkeybread.jpeg" class="w-100">
+              <img src="assets/images/food/mb.jpg" class="w-100">
             </a>
             <figcaption class="mt-2">
               <a href="/monkeybread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Monkey Bread Muffins</a>
