--- a/index.html
+++ b/index.html
@@ -212,6 +212,13 @@
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
             <a class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/simplemills.jpg" class="rounded-circle" >
+            </a>
+          </figure>
+        </div>
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/mjcp.jpg" class="rounded-circle" >
             </a>
           </figure>
