--- a/baklava.html
+++ b/baklava.html
@@ -105,11 +105,11 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/2 tsp cinnamon</label>
+                  <label class="form-check-label" for="unsalted">1/2 teaspoon cinnamon</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/8 tsp ground cloves</label>
+                  <label class="form-check-label" for="unsalted">1/8 teaspoon ground cloves</label>
                 </div>
               </div>
               <div class="checklist pb-4">
