--- a/butterbars.html
+++ b/butterbars.html
@@ -116,7 +116,7 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 tsp vanilla extract</label>
+                  <label class="form-check-label" for="unsalted">1 teaspoon vanilla extract</label>
                 </div>
               </div>
             </div>
