--- a/creamcheesefrosting.html
+++ b/creamcheesefrosting.html
@@ -92,11 +92,11 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="thickened" name="thickened" class="form-check-input">
-                  <label class="form-check-label" for="thickened">2 tablespoon half-and-half (sub 1 tablespoon whole milk and 1 tablespoon heavy cream)</label>
+                  <label class="form-check-label" for="thickened">2 tablespoons half-and-half (sub 1 tablespoon whole milk and 1 tablespoon heavy cream)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="tbsppowdered" name="tbsppowdered" class="form-check-input">
-                  <label class="form-check-label" for="tbsppowdered">1/2 teaspoon vanilla extract</label>
+                  <input type="checkbox" id="tablespoonpowdered" name="tablespoonpowdered" class="form-check-input">
+                  <label class="form-check-label" for="tablespoonpowdered">1/2 teaspoon vanilla extract</label>
                 </div>
               </div>
             </div>
