--- a/dinnerrolls.html
+++ b/dinnerrolls.html
@@ -100,7 +100,7 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">2 tbsp granulated sugar, divided</label>
+                  <label class="form-check-label" for="unsalted">2 tablespoons granulated sugar, divided</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
@@ -112,11 +112,11 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 tsp salt</label>
+                  <label class="form-check-label" for="unsalted">1 teaspoon salt</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">2 tbsp melted unsalted butter (optional topping)</label>
+                  <label class="form-check-label" for="unsalted">2 tablespoons melted unsalted butter (optional topping)</label>
                 </div>
               </div>
             </div>
@@ -127,11 +127,11 @@
               <ul class="instruction-list list-unstyled">
                 <li>
                   <span>1</span>
-                  <b>Prepare the dough: </b>Whisk the warm milk, yeast, and 1 Tablespoon of sugar together in the bowl of your stand mixer. Cover and allow to sit for 5 minutes. *If you do not own a stand mixer, you can do this in a large mixing bowl and in the next step, mix the dough together with a large wooden spoon/rubber spatula. It will take a bit of arm muscle. A hand mixer works, but the sticky dough repeatedly gets stuck in the beaters. Mixing by hand with a wooden spoon or rubber spatula is a better choice.*
+                  <b>Prepare the dough: </b>Whisk the warm milk, yeast, and 1 tablespoon of sugar together in the bowl of your stand mixer. Cover and allow to sit for 5 minutes. *If you do not own a stand mixer, you can do this in a large mixing bowl and in the next step, mix the dough together with a large wooden spoon/rubber spatula. It will take a bit of arm muscle. A hand mixer works, but the sticky dough repeatedly gets stuck in the beaters. Mixing by hand with a wooden spoon or rubber spatula is a better choice.*
                 </li>
                 <li>
                   <span>2</span>
-                  Add the remaining sugar, egg, butter, salt, and 1 cup flour. With a dough hook or paddle attachment, mix/beat on low speed for 30 seconds, scrape down the sides of the bowl with a rubber spatula, then add the remaining flour. Beat on medium speed until the dough comes together and pulls away from the sides of the bowl, about 2 minutes. If the dough seems too wet to a point where kneading (next step) would be impossible, beat in more flour 1 Tablespoon at a time until you have a workable dough, similar to the photos above. Dough should be soft and a little sticky, but still manageable to knead with lightly floured hands.
+                  Add the remaining sugar, egg, butter, salt, and 1 cup flour. With a dough hook or paddle attachment, mix/beat on low speed for 30 seconds, scrape down the sides of the bowl with a rubber spatula, then add the remaining flour. Beat on medium speed until the dough comes together and pulls away from the sides of the bowl, about 2 minutes. If the dough seems too wet to a point where kneading (next step) would be impossible, beat in more flour 1 tablespoon at a time until you have a workable dough, similar to the photos above. Dough should be soft and a little sticky, but still manageable to knead with lightly floured hands.
                 </li>
                 <li>
                   <span>3</span>
