--- a/hazelnuttruffles.html
+++ b/hazelnuttruffles.html
@@ -92,7 +92,7 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">2 tbsp (40g) hazelnut spread (I use the brands <a href="https://www.wholefoodsmarket.com/product/365-by-whole-foods-market-organic-hazelnut-cocoa-spread-123-oz-b082tdvptv" style="color: #FF6330">Whole Foods</a> and <a href="https://www.wholefoodsmarket.com/product/nocciolata-organic-hazelnut-spread-with-cocoa-milk-b0016ll5ds" style="color: #FF6330">Rigoni di Asiago</a>)</label>
+                  <label class="form-check-label" for="unsalted">2 tablespoons (40g) hazelnut spread (I use the brands <a href="https://www.wholefoodsmarket.com/product/365-by-whole-foods-market-organic-hazelnut-cocoa-spread-123-oz-b082tdvptv" style="color: #FF6330">Whole Foods</a> and <a href="https://www.wholefoodsmarket.com/product/nocciolata-organic-hazelnut-spread-with-cocoa-milk-b0016ll5ds" style="color: #FF6330">Rigoni di Asiago</a>)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
