--- a/lettucecups.html
+++ b/lettucecups.html
@@ -92,11 +92,11 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" class="form-check-input">
-                  <label class="form-check-label">3 tbsp avocado oil, divided</label>
+                  <label class="form-check-label">3 tablespoon avocado oil, divided</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" class="form-check-input">
-                  <label class="form-check-label">3/4 tsp salt, divided</label>
+                  <label class="form-check-label">3/4 teaspoon salt, divided</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" class="form-check-input">
@@ -112,11 +112,11 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" class="form-check-input">
-                  <label class="form-check-label">1/8 tsp black pepper</label>
+                  <label class="form-check-label">1/8 teaspoon black pepper</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" class="form-check-input">
-                  <label class="form-check-label">1 tsp cornstarch</label>
+                  <label class="form-check-label">1 teaspoon cornstarch</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" class="form-check-input">
@@ -131,19 +131,19 @@
               <ul class="instruction-list list-unstyled">
                 <li>
                   <span>1</span>
-                  Preheat oven to 450°. Toss sweet potatoes with 1 tbsp oil and 1/2 tsp salt. Spread in a single layer on a baking sheet lined with parchment paper. Bake until crispy, about 20 minutes. Let cool.
+                  Preheat oven to 450°. Toss sweet potatoes with 1 tablespoon oil and 1/2 teaspoon salt. Spread in a single layer on a baking sheet lined with parchment paper. Bake until crispy, about 20 minutes. Let cool.
                 </li>
                 <li>
                   <span>2</span>
-                  Heat 1 tbsp oil in a medium nonstick skillet over medium high heat. Add chicken and cook, stirring occasionally, until lightly browned, about 3 minutes. Remove chicken from skillet.
+                  Heat 1 tablespoon oil in a medium nonstick skillet over medium high heat. Add chicken and cook, stirring occasionally, until lightly browned, about 3 minutes. Remove chicken from skillet.
                 </li>
                 <li>
                   <span>3</span>
-                  Heat remaining 1 tbsp oil in skillet over medium high; add zucchini and cook, stirring often, until tender, about 3 minutes. Return chicken to skillet; add teriyaki sauce, pepper, and remaining 1/4 tsp salt, and stir to combine.
+                  Heat remaining 1 tablespoon oil in skillet over medium high; add zucchini and cook, stirring often, until tender, about 3 minutes. Return chicken to skillet; add teriyaki sauce, pepper, and remaining 1/4 teaspoon salt, and stir to combine.
                 </li>
                 <li>
                   <span>4</span>
-                  Stir together cornstarch and 1 tbsp cold water until smooth. Add to chicken mixture; cook, stirring occasionally, until thickened, about 1 minute.
+                  Stir together cornstarch and 1 tablespoon cold water until smooth. Add to chicken mixture; cook, stirring occasionally, until thickened, about 1 minute.
                 </li>
                 <li>
                   <span>5</span>
