--- a/monkeybread.html
+++ b/monkeybread.html
@@ -113,7 +113,7 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">3/4 cup + 2 tbsp warm milk (110℉)</label>
+                  <label class="form-check-label" for="unsalted">3/4 cup + 2 tablespoons warm milk (110℉)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
