--- a/pancakes.html
+++ b/pancakes.html
@@ -92,15 +92,15 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">2 tbsp sugar</label>
+                  <label class="form-check-label" for="unsalted">2 tablespoons sugar</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 tbsp baking powder</label>
+                  <label class="form-check-label" for="unsalted">1 tablespoon baking powder</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="crackers">1/4 tsp salt</label>
+                  <label class="form-check-label" for="crackers">1/4 teaspoon salt</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
@@ -112,11 +112,11 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">4 tbsp unsalted butter, melted, plus more for skillet/pan</label>
+                  <label class="form-check-label" for="unsalted">4 tablespoons unsalted butter, melted, plus more for skillet/pan</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 tsp vanilla extract</label>
+                  <label class="form-check-label" for="unsalted">1 teaspoon vanilla extract</label>
                 </div>
               </div>
             </div>
