--- a/soup.html
+++ b/soup.html
@@ -108,7 +108,7 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" class="form-check-input">
-                  <label class="form-check-label">1/2 tbsp salt</label>
+                  <label class="form-check-label">1/2 tablespoon salt</label>
                 </div>
               </div>
             </div>
