--- a/sourcherrystrudel.html
+++ b/sourcherrystrudel.html
@@ -100,7 +100,7 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">12 tbsp granulated sugar, divided in 3</label>
+                  <label class="form-check-label" for="unsalted">12 tablespoons granulated sugar, divided in 3</label>
                 </div>
               </div>
             </div>
@@ -119,7 +119,7 @@
                 </li>
                 <li>
                   <span>3</span>
-                  Carefully take the first fillo dough sheet and gently place it down on a clean surface. Brush melted butter throughout the sheet, making sure to brush the edges as well. Next, sprinkle 1 tbsp granulated sugar throughout the sheet. Set the sheet aside on a clean surface.
+                  Carefully take the first fillo dough sheet and gently place it down on a clean surface. Brush melted butter throughout the sheet, making sure to brush the edges as well. Next, sprinkle 1 tablespoon granulated sugar throughout the sheet. Set the sheet aside on a clean surface.
                 </li>
                 <li>
                   <span>4</span>
