--- a/tofu.html
+++ b/tofu.html
@@ -92,15 +92,15 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 tbsp extra-virgin olive oil</label>
+                  <label class="form-check-label" for="unsalted">1 tablespoon extra-virgin olive oil</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 tbsp tamari</label>
+                  <label class="form-check-label" for="unsalted">1 tablespoon tamari</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="crackers">1 tbsp cornstarch</label>
+                  <label class="form-check-label" for="crackers">1 tablespoon cornstarch</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
