--- a/chocolatechipcookies.html
+++ b/chocolatechipcookies.html
@@ -108,7 +108,7 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 tsp vanilla extract</label>
+                  <label class="form-check-label" for="unsalted">1 teaspoon vanilla extract</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
@@ -116,11 +116,11 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 tsp baking soda</label>
+                  <label class="form-check-label" for="unsalted">1 teaspoon baking soda</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/2 tsp salt</label>
+                  <label class="form-check-label" for="unsalted">1/2 teaspoon salt</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
