--- a/creampuffs.html
+++ b/creampuffs.html
@@ -89,7 +89,7 @@
                 <strong>Choux Pastry</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="crackers">1 stick + 2 tbsp (120g) unsalted butter</label>
+                  <label class="form-check-label" for="crackers">1 stick + 2 tablespoons (120g) unsalted butter</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
@@ -97,11 +97,11 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/2 tsp (3g) salt</label>
+                  <label class="form-check-label" for="unsalted">1/2 teaspoon (3g) salt</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 tbsp (13g) sugar</label>
+                  <label class="form-check-label" for="unsalted">1 tablespoon (13g) sugar</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
@@ -136,7 +136,7 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 tsp vanilla extract</label>
+                  <label class="form-check-label" for="unsalted">1 teaspoon vanilla extract</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
