--- a/loafbread.html
+++ b/loafbread.html
@@ -100,11 +100,11 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">2 tsp salt</label>
+                  <label class="form-check-label" for="unsalted">2 teaspoon salt</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/4 tsp yeast</label>
+                  <label class="form-check-label" for="unsalted">1/4 teaspoon yeast</label>
                 </div>
               </div>
             </div>
