--- a/pumpkinbread.html
+++ b/pumpkinbread.html
@@ -92,27 +92,27 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/2 tsp salt</label>
+                  <label class="form-check-label" for="unsalted">1/2 teaspoon salt</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 tsp baking soda</label>
+                  <label class="form-check-label" for="unsalted">1 teaspoon baking soda</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/2 tsp baking powder</label>
+                  <label class="form-check-label" for="unsalted">1/2 teaspoon baking powder</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 tsp ground cloves</label>
+                  <label class="form-check-label" for="unsalted">1 teaspoon ground cloves</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 tsp ground cinnamon</label>
+                  <label class="form-check-label" for="unsalted">1 teaspoon ground cinnamon</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 tsp ground nutmeg</label>
+                  <label class="form-check-label" for="unsalted">1 teaspoon ground nutmeg</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
