--- a/chocolatechipcookiecake.html
+++ b/chocolatechipcookiecake.html
@@ -101,7 +101,7 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">2 teaspoon vanilla extract</label>
+                  <label class="form-check-label" for="unsalted">2 teaspoons vanilla extract</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
@@ -109,7 +109,7 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">2 teaspoon cornstarch</label>
+                  <label class="form-check-label" for="unsalted">2 teaspoons cornstarch</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
