--- a/loafbread.html
+++ b/loafbread.html
@@ -100,7 +100,7 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">2 teaspoon salt</label>
+                  <label class="form-check-label" for="unsalted">2 teaspoons salt</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
