--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       </div>
     </section>
 
-    <section class="tstbite-components my-4 my-md-5">
+    <!-- <section class="tstbite-components my-4 my-md-5">
       <h5 class="py-3 mb-0">Baking Mixes</h5>
       <div class="row">
         <div class="col-lg-2 col-md-4 col-4">
@@ -217,7 +217,7 @@
           </figure>
         </div>
       </div>
-    </section>
+    </section> -->
   </div>
 
   <footer class="tstbite-footer pt-3 pt-md-5 mt-5 bg-lightest-gray">
