--- a/restaurants.html
+++ b/restaurants.html
@@ -41,6 +41,16 @@
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
+            <a href="/healthierdesserts" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/meringuesicon.png" class="rounded-circle" >
+            </a>
+            <figcaption class="mt-2">
+              <a href="/healthierdesserts" class="tstbite-category-title">Desserts</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
             <a href="/breads" class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/breadsicon.jpeg" class="rounded-circle" >
             </a>
@@ -51,11 +61,11 @@
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/healthierdesserts" class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/food/meringuesicon.png" class="rounded-circle" >
+            <a href="/breads" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/breadsicon.jpeg" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/healthierdesserts" class="tstbite-category-title">Desserts</a>
+              <a href="/breads" class="tstbite-category-title">Cafes</a>
             </figcaption>
           </figure>
         </div>
