--- a/restaurants.html
+++ b/restaurants.html
@@ -55,17 +55,7 @@
               <img src="assets/images/food/breadsicon.jpeg" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/breads" class="tstbite-category-title">Bakeries</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-lg-2 col-md-4 col-4">
-          <figure class="my-3 text-center tstbite-card">
-            <a href="/breads" class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/food/breadsicon.jpeg" class="rounded-circle" >
-            </a>
-            <figcaption class="mt-2">
-              <a href="/breads" class="tstbite-category-title">Cafes</a>
+              <a href="/breads" class="tstbite-category-title">Bakeries/Cafes</a>
             </figcaption>
           </figure>
         </div>
