--- a/food.html
+++ b/food.html
@@ -31,11 +31,11 @@
       <div class="row">
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/cookies" class="tstbite-animation stretched-link rounded-circle">
+            <a href="/restaurants" class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/cookieicon.jpeg" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/cookies" class="tstbite-category-title">Restaurants</a>
+              <a href="/restaurants" class="tstbite-category-title">Restaurants</a>
             </figcaption>
           </figure>
         </div>
