--- a/la.html
+++ b/la.html
@@ -27,11 +27,49 @@
     </header>
 
     <section class="tstbite-components my-4 my-md-5">
-      <h5 class="py-3 mb-0"><a href="/sandiego" style="color: #FF6330">San Diego</a></h5>
-      <h5 class="py-3 mb-0"><a href="/vegas" style="color: #FF6330">Las Vegas</a></h5>
-      <h5 class="py-3 mb-0"><a href="/newyork" style="color: #FF6330">New York</a></h5>
-      <h5 class="py-3 mb-0"><a href="/arizona" style="color: #FF6330">Arizona</a></h5>
-      <h5 class="py-3 mb-0"><a href="/la" style="color: #FF6330">Los Angeles</a></h5>
+      <h5 class="py-3 mb-0">Food</h5>
+      <div class="row">
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a href="/restaurants" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/cookieicon.jpeg" class="rounded-circle" >
+            </a>
+            <figcaption class="mt-2">
+              <a href="/restaurants" class="tstbite-category-title">Restaurants</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a href="/healthierdesserts" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/meringuesicon.png" class="rounded-circle" >
+            </a>
+            <figcaption class="mt-2">
+              <a href="/healthierdesserts" class="tstbite-category-title">Desserts</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a href="/breads" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/breadsicon.jpeg" class="rounded-circle" >
+            </a>
+            <figcaption class="mt-2">
+              <a href="/breads" class="tstbite-category-title">Bakeries/Cafes</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a href="/bars" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/butterbarsicon.png" class="rounded-circle" >
+            </a>
+            <figcaption class="mt-2">
+              <a href="/bars" class="tstbite-category-title">Other</a>
+            </figcaption>
+          </figure>
+        </div>
+      </div>
     </section>
   </div>
 </section>
