--- a/sandiego.html
+++ b/sandiego.html
@@ -31,41 +31,41 @@
       <div class="row">
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/restaurants" class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/food/cookieicon.jpeg" class="rounded-circle" >
+            <a href="/" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/buona.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/restaurants" class="tstbite-category-title">Restaurants</a>
+              <a href="/" class="tstbite-category-title">Buona Forchetta</a>
             </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/healthierdesserts" class="tstbite-animation stretched-link rounded-circle">
+            <a href="/" class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/meringuesicon.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/healthierdesserts" class="tstbite-category-title">Desserts</a>
+              <a href="/" class="tstbite-category-title">Desserts</a>
             </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/breads" class="tstbite-animation stretched-link rounded-circle">
+            <a href="/" class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/breadsicon.jpeg" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/breads" class="tstbite-category-title">Bakeries/Cafes</a>
+              <a href="/" class="tstbite-category-title">Bakeries/Cafes</a>
             </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/bars" class="tstbite-animation stretched-link rounded-circle">
+            <a href="/" class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/butterbarsicon.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/bars" class="tstbite-category-title">Other</a>
+              <a href="/" class="tstbite-category-title">Other</a>
             </figcaption>
           </figure>
         </div>
