--- a/sandiego.html
+++ b/sandiego.html
@@ -40,7 +40,7 @@
             </figcaption>
           </figure>
         </div>
-        <div class="col-lg-2 col-md-4 col-4">
+        <!-- <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
             <a href="/" class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/meringuesicon.png" class="rounded-circle" >
@@ -69,7 +69,7 @@
               <a href="/" class="tstbite-category-title">Other</a>
             </figcaption>
           </figure>
-        </div>
+        </div> -->
       </div>
     </section>
   </div>
