--- a/newyork.html
+++ b/newyork.html
@@ -27,8 +27,8 @@
     </header>
 
     <section class="tstbite-components my-4 my-md-5">
-      <h5 class="py-3 mb-0">Food</h5>
-      <div class="row">
+      <h5 class="py-3 mb-0">New York</h5>
+      <!-- <div class="row">
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
             <a href="/restaurants" class="tstbite-animation stretched-link rounded-circle">
@@ -69,7 +69,7 @@
             </figcaption>
           </figure>
         </div>
-      </div>
+      </div> -->
     </section>
   </div>
 </section>
