--- a/sandiego.html
+++ b/sandiego.html
@@ -36,7 +36,7 @@
             </a>
             <figcaption class="mt-2">
               <a href="/" class="tstbite-category-title">Buona Forchetta</a>
-              <p>Rigatoni with Buona forchetta sauce without tomato sauce</p>
+              <p>Rigatoni with Buona forchetta sauce</p>
             </figcaption>
           </figure>
         </div>
