--- a/sandiego.html
+++ b/sandiego.html
@@ -40,36 +40,50 @@
             </figcaption>
           </figure>
         </div>
-        <!-- <div class="col-lg-2 col-md-4 col-4">
+        <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
             <a href="/" class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/food/meringuesicon.png" class="rounded-circle" >
+              <img src="assets/images/food/waverly.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/" class="tstbite-category-title">Desserts</a>
+              <a href="/" class="tstbite-category-title">Waverly</a>
+              <p>Caesar salad</p>
             </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
             <a href="/" class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/food/breadsicon.jpeg" class="rounded-circle" >
+              <img src="assets/images/food/homestead.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/" class="tstbite-category-title">Bakeries/Cafes</a>
+              <a href="/" class="tstbite-category-title">Homestead</a>
+              <p>Grilled cheese sandwich</p>
             </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
             <a href="/" class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/food/butterbarsicon.png" class="rounded-circle" >
+              <img src="assets/images/food/blueocean.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/" class="tstbite-category-title">Other</a>
+              <a href="/" class="tstbite-category-title">Blue Ocean</a>
+              <p>Chicken teriyaki with white rice</p>
             </figcaption>
           </figure>
-        </div> -->
+        </div>
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a href="/" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/cardellino.png" class="rounded-circle" >
+            </a>
+            <figcaption class="mt-2">
+              <a href="/" class="tstbite-category-title">Cardellino</a>
+              <p>Pull-apart cheesy garlic bread</p>
+            </figcaption>
+          </figure>
+        </div>
       </div>
     </section>
   </div>
